# concerto-rust

./: AGENTS.md  Cargo.toml  README.md  TODO
.github/workflows/: ci.yml  conformance-test.yml
concerto-core/: Cargo.toml
concerto-core/examples/assets/concerto_models/: basic.cto  basic.json
concerto-core/src/: error.rs  lib.rs  metamodel_validation.rs  model_file.rs  model_manager.rs  model_util.rs  rootmodel.rs  traits.rs  types.rs  util.rs
concerto-core/src/introspect/: declaration.rs  decorator.rs  import.rs  mod.rs  model_file.rs  property.rs
concerto-core/tests/: conformance_tests.rs  declaration_tests.rs  enum_tests.rs  map_tests.rs  namespace_tests.rs  scalar_tests.rs
concerto-macros/: Cargo.toml
concerto-macros/src/: lib.rs
concerto-metamodel/: Cargo.toml  build.rs
concerto-metamodel/codegen/: generate.js  inputs.sha256  package-lock.json  package.json
concerto-metamodel/src/: lib.rs  model_manager.rs  property_type.rs
concerto-metamodel/src/metamodel/: mod.rs  utils.rs
src/: error.rs  lib.rs  metamodel_validation.rs  model_file.rs  model_manager.rs  traits.rs  util.rs  validation.rs
src/metamodel/: concerto.rs  concerto_1_0_0.rs  concerto_decorator_1_0_0.rs  concerto_metamodel_1_0_0.rs  declaration_ext.rs  extended_metamodel.rs  mod.rs
tests/: conformance_tests.rs  declaration_tests.rs  enum_tests.rs  map_tests.rs  namespace_tests.rs  scalar_tests.rs
