[package]
name = "concerto-core"
version = "0.1.0"
edition = "2024"
authors = ["Accord Project <accordproject.org>"]
description = "Core implementation of Concerto Modelling Language in Rust"
license = "Apache-2.0"
license-file = "../LICENSE"
homepage = "https://concerto.accordproject.org/"

[dependencies]
concerto-metamodel = { path = "../concerto-metamodel" }
concerto-macros = { path = "../concerto-macros" }
thiserror = "2"
regex = "1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
