[package]
name = "concerto-core"
description = "Core runtime for the Accord Project Concerto modeling language: in-memory model representation and validation."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
concerto-metamodel = { path = "../concerto-metamodel" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
