[package]
name = "concerto-macros"
version = "0.1.0"
edition = "2024"
authors = ["Accord Project <accordproject.org>"]
description = "Macro definitions used by the `concerto-core` crate."
license = "Apache-2.0"
license-file = "../LICENSE"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.117", features = ["full"] }
quote = "1.0.45"
